[package]
name = "miniproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["full"] }
futures = { version = "0.3.0", features = ["thread-pool"]}
clap = { version = "2.32.0", features = ["yaml"] }
rust-ini = "0.16.0"
bytes = "1.0.0"
lazy_static = "1.0.0"
